<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/ic_arrow"
        android:icon="@drawable/ic_arrow_back"
        android:title="@string/back" />
    <item
        android:id="@+id/ic_android"
        android:icon="@drawable/ic_android"
        android:title="@string/android"
        />
    <item
        android:id ="@+id/ic_start_analyze"
        android:icon="@drawable/ic_start_analyze"
        android:title="@string/start_analyze"
        />
    <item
        android:id="@+id/ic_center_focus"
        android:icon="@drawable/ic_center_focus"
        android:title="@string/center"
        />
    <item
        android:id="@+id/ic_backup"
        android:icon="@drawable/ic_backup"
        android:title="@string/backup"
        />
</menu>