<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:id="@+id/footer"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/tv_date_fb"
        tools:text="Date"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:lines="1"
        android:singleLine="true"
        android:textColor="#909090"
        android:textSize="13sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_comments_fb"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tv_date_fb"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_comments_icon_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:lines="1"
            android:text="@string/font_comment"
            android:textColor="@color/colorIcon"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_comments_count_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/tv_comments_icon_fb"
            android:gravity="center_vertical"
            android:lines="1"
            android:textColor="#909090"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:text="2135" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_reposts_fb"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/rl_comments_fb"


        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_reposts_icon_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/font_repost"
            android:textColor="@color/colorIcon"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_reposts_count_fb"
            tools:text="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_reposts_icon_fb"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_reposts_icon_fb"
            android:gravity="center_vertical"
            android:lines="1"
            android:textColor="#909090"
            android:textSize="13sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_likes_fb"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_likes_icon_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:lines="1"
            android:text="@string/font_heart"
            android:textColor="@color/colorIcon"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_likes_count_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_likes_icon_fb"
            android:layout_toRightOf="@id/tv_likes_icon_fb"
            android:lines="1"
            android:text="1000"
            android:textColor="#909090"
            android:textSize="13sp"
            android:textStyle="bold" />
    </RelativeLayout>




    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/cv_attach_fb"
        android:background="@color/colorDivider" />

</RelativeLayout>